# faster-llm-training

./: .gitignore  Cargo.toml  build.sh  p.py  pt.py
candle-version/: Cargo.toml
candle-version/src/: main.rs
candle-version/src/model/: attn.rs  block.rs  gpt.rs  mlp.rs  rotary.rs
cuda-bindings/: Cargo.toml  build.rs
cuda-bindings/src/: bindings.rs  handler.rs  lib.rs  tensor.rs  util.rs
cuda-bindings/src/ops/: add.rs  div.rs  gelu.rs  mod.rs  mul.rs  sqrt.rs  square.rs
cuda-build/: Cargo.toml  wrapper.h
cuda-build/src/: main.rs
cuda-version/: Cargo.toml
cuda-version/src/: autograd.rs  main.rs
cuda-version/src/model/: mod.rs  rms_norm.rs
kernels/: kernel.cu
src/: main.rs
src/model/: mod.rs
